force-app/main/default/objects/Revature_Music_Class_Roster__c/Revature_Music_Class_Roster__c.object-meta.xml
<CustomObject>
    <label>Revature Music Class Roster</label>
    <nameField>
        <label>Revature Music Class Roster Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Revature Music Class Rosters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>