force-app/main/default/objects/Revature_Music_Class_Roster__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Revature Music Class Rosters</relationshipLabel>
    <relationshipName>Revature_Music_Class_Rosters</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>