force-app/main/default/objects/Revature_Music_Class_Roster__c/fields/Instructor__c.field-meta.xml
<CustomField>
    <fullName>Instructor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Instructor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Revature Music Class Rosters</relationshipLabel>
    <relationshipName>Revature_Music_Class_Rosters</relationshipName>
    <type>Lookup</type>
</CustomField>