force-app/main/default/objects/Revature_Music_Class_Roster__c/fields/Revature_Music_Class__c.field-meta.xml
<CustomField>
    <fullName>Revature_Music_Class__c</fullName>
    <label>Revature Music Class</label>
    <referenceTo>Revature_Music_Class__c</referenceTo>
    <relationshipLabel>Revature Music Class Rosters</relationshipLabel>
    <relationshipName>Revature_Music_Class_Rosters</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>