force-app/main/default/objects/Revature_Music_Class_Roster__c/fields/Student_10__c.field-meta.xml
<CustomField>
    <fullName>Student_10__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student 10</label>
    <referenceTo>Student__c</referenceTo>
    <relationshipLabel>Revature Music Class Rosters (Student 10)</relationshipLabel>
    <relationshipName>Revature_Music_Class_Rosters9</relationshipName>
    <type>Lookup</type>
</CustomField>