force-app/main/default/objects/Revature_Music_Class_Roster__c/fields/Student_11__c.field-meta.xml
<CustomField>
    <fullName>Student_11__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student 11</label>
    <referenceTo>Student__c</referenceTo>
    <relationshipLabel>Revature Music Class Rosters (Student 11)</relationshipLabel>
    <relationshipName>Revature_Music_Class_RostersdV3d</relationshipName>
    <type>Lookup</type>
</CustomField>