force-app/main/default/objects/Revature_Music_Class_Roster__c/fields/Student_12__c.field-meta.xml
<CustomField>
    <fullName>Student_12__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student 12</label>
    <referenceTo>Student__c</referenceTo>
    <relationshipLabel>Revature Music Class Rosters (Student 12)</relationshipLabel>
    <relationshipName>Revature_Music_Class_RostersdV3n</relationshipName>
    <type>Lookup</type>
</CustomField>