force-app/main/default/objects/Revature_Music_Class_Roster__c/fields/Students__c.field-meta.xml
<CustomField>
    <fullName>Students__c</fullName>
    <label>Students</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>